--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
 	<title>lorem</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			background: #666;
+		}
+		</style>
 </head>
 <body>
-Lorem Ipsum dolor sit amet
 </body>
 </html>
